// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should return a Input 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.c1 {
  display: inline-block;
  min-width: 0;
  width: 100%;
  font: inherit;
  padding: 0.30000000000000004rem 0.55rem;
  margin: 0;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  background-color: #fff;
  border-width: 1px;
  border-style: solid;
  border-color: #e6e9ee;
  color: black;
  outline: none;
  border-color: #e6e9ee;
  border-radius: 12px;
}

.c1:hover {
  border-color: #3B74F3;
}

.c1:focus {
  box-shadow: 0 0 0 2px #3B74F320;
  border-color: #3B74F3;
}

.c1::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::placeholder {
  color: rgba(0,0,0,0.25);
}

<div
  className="c0"
>
  <input
    className="c1"
    type="base"
  />
</div>
`;

exports[`Input should return a Large Input 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.c1 {
  display: inline-block;
  min-width: 0;
  width: 100%;
  font: inherit;
  padding: 0.55rem 1.05rem;
  margin: 0;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  background-color: #fff;
  border-width: 1px;
  border-style: solid;
  border-color: #e6e9ee;
  color: black;
  outline: none;
  border-color: #e6e9ee;
  border-radius: 12px;
}

.c1:hover {
  border-color: #3B74F3;
}

.c1:focus {
  box-shadow: 0 0 0 2px #3B74F320;
  border-color: #3B74F3;
}

.c1::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::placeholder {
  color: rgba(0,0,0,0.25);
}

<div
  className="c0"
>
  <input
    className="c1"
    type="base"
  />
</div>
`;

exports[`Input should return a Medium Input 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  font-size: 1rem;
  line-height: 1.5rem;
}

.c1 {
  display: inline-block;
  min-width: 0;
  width: 100%;
  font: inherit;
  padding: 0.55rem 1.05rem;
  margin: 0;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  background-color: #fff;
  border-width: 1px;
  border-style: solid;
  border-color: #e6e9ee;
  color: black;
  outline: none;
  border-color: #e6e9ee;
  border-radius: 12px;
}

.c1:hover {
  border-color: #3B74F3;
}

.c1:focus {
  box-shadow: 0 0 0 2px #3B74F320;
  border-color: #3B74F3;
}

.c1::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::placeholder {
  color: rgba(0,0,0,0.25);
}

<div
  className="c0"
>
  <input
    className="c1"
    type="base"
  />
</div>
`;

exports[`Input should return a Small Input 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.c1 {
  display: inline-block;
  min-width: 0;
  width: 100%;
  font: inherit;
  padding: 0.30000000000000004rem 0.55rem;
  margin: 0;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  background-color: #fff;
  border-width: 1px;
  border-style: solid;
  border-color: #e6e9ee;
  color: black;
  outline: none;
  border-color: #e6e9ee;
  border-radius: 12px;
}

.c1:hover {
  border-color: #3B74F3;
}

.c1:focus {
  box-shadow: 0 0 0 2px #3B74F320;
  border-color: #3B74F3;
}

.c1::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::placeholder {
  color: rgba(0,0,0,0.25);
}

<div
  className="c0"
>
  <input
    className="c1"
    type="base"
  />
</div>
`;

exports[`Input should return a error Input 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.c1 {
  display: inline-block;
  min-width: 0;
  width: 100%;
  font: inherit;
  padding: 0.30000000000000004rem 0.55rem;
  margin: 0;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  background-color: #fff;
  border-width: 1px;
  border-style: solid;
  border-color: #e6e9ee;
  color: black;
  outline: none;
  border-color: #e6e9ee;
  border-radius: 12px;
}

.c1:hover {
  border-color: #ff0e0e;
}

.c1:focus {
  box-shadow: 0 0 0 2px #ff0e0e20;
  border-color: #ff0e0e;
}

.c1::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::placeholder {
  color: rgba(0,0,0,0.25);
}

<div
  className="c0"
>
  <input
    className="c1"
    type="error"
  />
</div>
`;

exports[`Input should return a success Input 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.c1 {
  display: inline-block;
  min-width: 0;
  width: 100%;
  font: inherit;
  padding: 0.30000000000000004rem 0.55rem;
  margin: 0;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  background-color: #fff;
  border-width: 1px;
  border-style: solid;
  border-color: #e6e9ee;
  color: black;
  outline: none;
  border-color: #e6e9ee;
  border-radius: 12px;
}

.c1:hover {
  border-color: #198754;
}

.c1:focus {
  box-shadow: 0 0 0 2px #19875420;
  border-color: #198754;
}

.c1::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::placeholder {
  color: rgba(0,0,0,0.25);
}

<div
  className="c0"
>
  <input
    className="c1"
    type="success"
  />
</div>
`;

exports[`Input should return a warning Input 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.c1 {
  display: inline-block;
  min-width: 0;
  width: 100%;
  font: inherit;
  padding: 0.30000000000000004rem 0.55rem;
  margin: 0;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  background-color: #fff;
  border-width: 1px;
  border-style: solid;
  border-color: #e6e9ee;
  color: black;
  outline: none;
  border-color: #e6e9ee;
  border-radius: 12px;
}

.c1:hover {
  border-color: #ffcc00;
}

.c1:focus {
  box-shadow: 0 0 0 2px #ffcc0020;
  border-color: #ffcc00;
}

.c1::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::placeholder {
  color: rgba(0,0,0,0.25);
}

<div
  className="c0"
>
  <input
    className="c1"
    type="warning"
  />
</div>
`;

exports[`Input should return a with prefix and postfix Input 1`] = `
.c1 {
  border-left: 1px solid;
  border-radius: 12px 0 0 12px;
  padding: 0.55rem 1.05rem;
  margin: 0;
  font: inherit;
  background-color: #fff;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #e6e9ee;
  color: #000;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
}

.c3 {
  border-right: 1px solid;
  border-radius: 0 12px 12px 0;
  padding: 0.55rem 1.05rem;
  margin: 0;
  font: inherit;
  background-color: #fff;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #e6e9ee;
  color: #000;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.c2 {
  display: inline-block;
  min-width: 0;
  width: 100%;
  font: inherit;
  padding: 0.55rem 1.05rem;
  margin: 0;
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  background-color: #fff;
  border-width: 1px;
  border-style: solid;
  border-color: #e6e9ee;
  color: black;
  outline: none;
  border-color: #e6e9ee;
  border-radius: 0;
}

.c2:hover {
  border-color: #3B74F3;
}

.c2:focus {
  box-shadow: 0 0 0 2px #3B74F320;
  border-color: #3B74F3;
}

.c2::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c2::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c2:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c2::placeholder {
  color: rgba(0,0,0,0.25);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    https://
  </div>
  <input
    className="c2"
    prefix="https://"
    type="base"
  />
  <div
    className="c3"
  >
    .com
  </div>
</div>
`;
